[package]
name = "oci-spec"
version = "0.3.0"
edition = "2018"
authors = [
    "Furisto",
    "Sascha Grunert <sgrunert@redhat.com>",
    "Toru Komatsu <k0ma@utam0k.jp>",
]
description = "Open Container Initiative Specifictions in Rust"
documentation = "https://docs.rs/oci-spec"
readme = "README.md"
homepage = "https://github.com/containers/oci-spec-rs"
repository = "https://github.com/containers/oci-spec-rs"
license = "Apache-2.0"
keywords = ["oci", "spec", "container", "runtime", "image"]
categories = ["api-bindings"]

[features]
default = ["image", "runtime"]
proptests = ["quickcheck"]
builder = ["derive_builder", "getset"]
image = []
runtime = []

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }
anyhow = "1.0.42"
serde_json = "1.0.66"
# Waiting for new caps release, replace git with version on release
caps = { git = "https://github.com/lucab/caps-rs", rev = "cb54844", features = ["serde_support"] }
quickcheck = { version = "1.0.3", optional = true }
derive_builder = { version = "0.10.2", optional = true }
getset = { version = "0.1.1", optional = true }
cfg-if = "1.0.0"

[dev-dependencies]
tempfile = "3.2.0"
