[package]
name = "oci-spec"
version = "0.5.5"
edition = "2018"
authors = [
    "Furisto",
    "Sascha Grunert <sgrunert@redhat.com>",
    "Toru Komatsu <k0ma@utam0k.jp>",
]
description = "Open Container Initiative Specifictions in Rust"
documentation = "https://docs.rs/oci-spec"
readme = "README.md"
homepage = "https://github.com/containers/oci-spec-rs"
repository = "https://github.com/containers/oci-spec-rs"
license = "Apache-2.0"
keywords = ["oci", "spec", "container", "runtime", "image"]
categories = ["api-bindings"]

[features]
default = ["distribution", "image", "runtime"]
proptests = ["quickcheck"]
distribution = []
image = []
runtime = []

[dependencies]
serde = { version = "1.0.129", features = ["derive"] }
thiserror = "1.0.26"
serde_json = "1.0.66"
quickcheck = { version = "1.0.3", optional = true }
derive_builder = "0.11.0"
getset = "0.1.1"

[dev-dependencies]
tempfile = "3.2.0"
serde_json = { version = "1.0.66", features = ["preserve_order"] }
